--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,13 @@
-<html> 
-    <head> 
-        <title>網管分項考核-1</title> 
-    </head> 
-    <body>
-        <p>Hello World</p>
-    </body> 
+<!DOCTYPE html>
+<html lang="en">
+<head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>minecraft-item-spinner</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
+</head> 
+<body>    
+    <h1 id="hello">Hello World</h1>
+</body> 
 </html>
