--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>minecraft-item-spinner</title>
+    <title>Minecraft Item Spinner</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='main.js') }}"></script>
 </head> 
-<body>    
-    <h1 id="hello">Hello World</h1>
+<body> 
+    <div id="box1"></div>
+    <div id="box2"></div>
 </body> 
 </html>
