--- a/static/css/login.css
+++ b/static/css/login.css
@@ -15,28 +15,35 @@
 
     margin: 0;
     position: absolute;
-    top: 40%;
-    transform: translateY(-40%);
+    top: 60%;
+    transform: translateY(-60%);
     left: 50%;
     transform: translateX(-50%);
 
     height: 150px;
     width: 750px;
-    line-height: 50px;
     font-size: 60px;
     font-family: "Arial";
     border-radius: 30px;
+    margin-top:15px;
+    min-width: 300px;
 }
 
 #headtext {
     margin: 0;
     position: absolute;
-    top: 20%;
-    transform: translateY(-20%);
+    top: 30%;
+    transform: translateY(-30%);
     left: 50%;
     transform: translateX(-50%);
+    text-align: center;
 
-    line-height: 50px;
     font-size: 75px;
+    width: 100%;
+    height: 40%;
+    white-space: nowrap;
+    overflow: hidden;
+    
+    min-width:100%;
     font-family: "Arial";
 }
