--- a/templates/login.html
+++ b/templates/login.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
     <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </head> 
-<body> 
-    <div id="box1">
-        <div><h1 id="headtext" style="color: chocolate">hi 在抽卡前請先登入discord</h1></div>
-        <div><button id="login">Login with Discord</button></div>
-    </div>
+<body>
+    <div><h1 id="headtext" style="color: chocolate">hi 在抽卡前請先登入discord!!!</h1></div>
+    <form method="post">
+        <input type="submit" value="sumbit" id="login">
+    </form>
 </body> 
 </html>
