Discord Third Party Login

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,12 @@
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </head> 
 <body> 
-    <div id="box1"></div>
-    <div id="box2"></div>
+    <div id="box1">
+        <img src="https://cdn.discordapp.com/avatars/{{ userid }}/{{ useravatar }}.jpg" id="avatar">
+        <h1 id="username" style="color:antiquewhite">歡迎，{{ username }}！</h1>
+    </div>
+    <div id="box2">
+        
+    </div>
 </body> 
 </html>
