--- a/static/css/login.css
+++ b/static/css/login.css
@@ -47,7 +47,7 @@ body {
     transform: translateX(-50%);
     text-align: center;
 
-    font-size: 75px;
+    font-size: 400%;
     width: 100%;
     height: 40%;
     white-space: nowrap;
