--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
     left: 0px;
     right: 0px;
     top: 0px;
-    height: 10%;
+    height: 7em;
     margin: 0px;
 }
 #box2 {
@@ -13,7 +13,33 @@
     position: absolute;
     left: 0px;
     right: 0px;
-    top: 10%;
-    height: 90%;
+    top: 7em;
+    height: 200%;
     margin: 0px;
+}
+
+#avatar {
+    border-color:deepskyblue;
+
+    border-radius: 80%;
+    max-width: 7em;
+    min-width: 7em;
+    z-index: 100;
+}
+
+#username {
+    margin: 0;
+    position: absolute;
+    top: 15%;
+    transform: translateY(-15%);
+    text-align: center;
+
+    font-size: 5em;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    
+    min-width:50%;
+    max-width:100%;
+    font-family: "Arial";
 }
