--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     <div id="box1">
         <img src="https://cdn.discordapp.com/avatars/{{ userid }}/{{ useravatar }}.jpg" id="avatar">
         <h1 id="username" style="color:antiquewhite">歡迎，{{ username }}！</h1>
+        <a href="/login"><button id="logout">登出</button></a>
     </div>
     <div id="box2">
         
