--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 <body>
     <div><h1 id="headtext" style="color: chocolate">hi 在抽卡前請先登入discord!!!</h1></div>
     <form method="post">
-        <input type="submit" value="Login with Discord" id="login">
+        <button type="submit" id="login">Login with Discord</button>
     </form>
 </body> 
 </html>
