--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,9 @@
         <a href="/login"><button id="logout">登出</button></a>
     </div>
     <div id="box2">
-        <img src="{{ url_for('static', filename='images/minecraft_closed_chest.png') }}" id="closed_chest">
+        <form method="post">
+            <button type="sumbit" id="closed">抽物品!</button>
+        </form>
     </div>
 </body> 
 </html>
