--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,9 @@
     </div>
     <div id="box2">
         <form method="post">
-            <button type="sumbit" id="closed">抽物品!</button>
+            <div class="roll">
+                <button type="sumbit" id="closed">抽物品!</button>
+            </div>
         </form>
     </div>
 </body> 
