--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,15 @@
 <body> 
     <div id="box1">
         <img src="https://cdn.discordapp.com/avatars/{{ userid }}/{{ useravatar }}.jpg" id="avatar">
-        <h1 id="username" style="color:antiquewhite">歡迎，{{ username }}！</h1>
-        <a href="/login"><button id="logout">登出</button></a>
+        <h1 id="username" style="color:antiquewhite">歡迎 {{ username }}！</h1>
+        <form method="post">
+            <button type="sumbit" name="btn" id="logout" value="logout">登出</button>
+        </form>
     </div>
     <div id="box2">
         <form method="post">
             <div class="roll">
-                <button type="sumbit" id="closed">抽物品!</button>
+                <button type="sumbit" name="btn" id="closed" value="roll">抽物品!</button>
             </div>
         </form>
     </div>
